Support for no shared filesystem (unsupport for shared filesystem?) and (eventual) support for NFS servers without race conditions!
This means no NFS between nodes and ops/fs. There are still NFS mounts of
ops on boss however.

Added new defs-* variable NOSHAREDFS, which when set non-zero will disable
the export of NFS filesystems to nodes.  Involved lots of little changes:

 * /users, /proj, and /share filesystems are not exported to nodes.

 * Returned mount info now includes an FSTYPE key which will be set to "LOCAL"
   if NOSHAREDFS is in effect (by default it is set to "NFS-RACY"; more on
   this later).  In the case where it is set to LOCAL, the other mount lines
   no longer contain REMOTE=foo settings.  Because of this change,
   THE TMCD VERSION NUMBER HAS BEEN BUMPED TO 32.

 * The client rc.mounts script will now create local versions of /users/*,
   /proj/<pid>, and /share when FSTYPE=LOCAL.  It first runs mkextrafs to
   create a large partition for these, since someday we will likely want
   to pre-populate these with a non-trivial amount of data.  Right now,
   the only thing that is put in the user's homedir is the standard dotfiles
   for the OS and the Emulab authorized_keys file (so you can login).

 * Linktest had to be modified to fetch the various results files (via
   loghole) rather than just assuming they were in /proj.  And also changed
   to invoke tevc with the local copy of the event key so it won't try to
   read it over NFS.

 * create_image was modified to ssh to the node and run the imagezip
   command, capturing the output of ssh.  This is controlled via the "-s"
   option which defaults to on for a NOSHAREDFS system, but can also be
   used on a normal system.

 * elabinelab's can be configured with/without a shared FS via the
   CONFIG_SHAREDFS attribute (note polarity change) which defaults to 1.

Another new defs-* variable, NFSRACY, will some day allow you to specify
(by setting to 0) that your NFS server does NOT have the nefa

--- a/configure.in
+++ b/configure.in
@@ -58,7 +58,7 @@ AC_SUBST(PATH)
 CPPFLAGS="-I/usr/local/include"
 
 # BEGIN Python detection.
-AC_PATH_PROGS(PYTHON, python python2.4 python2.3 python2.2)
+AC_PATH_PROGS(PYTHON, python python2.6 python2.5 python2.4 python2.3 python2.2)
 
 if test x"$PYTHON" = x""; then
     AC_MSG_ERROR([python not detected])
@@ -219,6 +219,7 @@ AC_SUBST(GMAP_API_KEY)
 AC_SUBST(NODE_USAGE_SUPPORT)
 AC_SUBST(NOSTACKMIB)
 AC_SUBST(EXP_VIS_SUPPORT)
+AC_SUBST(NOSHAREDFS)
 AC_SUBST(SELFLOADER_DATA)
 
 #
@@ -308,6 +309,8 @@ STANDALONE_CLEARINGHOUSE=0
 NODE_USAGE_SUPPORT=0
 EXP_VIS_SUPPORT=0
 NOSTACKMIB=0
+NOSHAREDFS=0
+NFSRACY=1
 SELFLOADER_DATA="__DATA__"
 
 #
@@ -425,7 +428,12 @@ fi
 if test $TPM -eq 1; then
     AC_DEFINE_UNQUOTED(TPM, 1)
 fi
-
+if test $NOSHAREDFS -eq 1; then
+    AC_DEFINE_UNQUOTED(NOSHAREDFS, 1)
+fi
+if test $NFSRACY -eq 1; then
+    AC_DEFINE_UNQUOTED(NFSRACY, 1)
+fi
 
 LOG_TESTBED=`echo "LOG_$TBLOGFACIL" | tr a-z A-Z`
 AC_DEFINE_UNQUOTED(LOG_TESTBED, $LOG_TESTBED)
@@ -745,7 +753,6 @@ else
 	optional_subdirs="$optional_subdirs";
         AC_DEFINE_UNQUOTED(WINSUPPORT, 1)
 fi
-
 
 #
 # Check for ulsshxmlrpc header
