Silence NS warning about unset elabinelab variables.
Also update default to FBSD73-STD (for those who do not have the aforementioned
variables set).

--- a/tbsetup/ns2ir/parse-ns.in
+++ b/tbsetup/ns2ir/parse-ns.in
@@ -628,14 +628,14 @@ sub GenDefsFile($)
     #
     my %defvalues = (
 	"elabinelab/singlenet" => 0,
-	"elabinelab/boss_osid" => "FBSD63-STD",
-	"elabinelab/ops_osid"  => "FBSD63-STD",
-	"elabinelab/fs_osid"   => "FBSD63-STD"
+	"elabinelab/boss_osid" => "FBSD73-STD",
+	"elabinelab/ops_osid"  => "FBSD73-STD",
+	"elabinelab/fs_osid"   => "FBSD73-STD"
     );
     while (my ($var, $def) = each(%defvalues)) {
 	if (!exists($sitevars{$var})) {
-	    print "*** WARNING: sitevar $var does not exist or has no value, ",
-	          "defaulting to $def\n";
+	    ## don't be so alarmist
+	    #print "*** WARNING: sitevar $var does not exist or has no value, defaulting to $def\n";
 	    print TCL "set sitevariables($var) $def\n";
 	    $sitevars{$var} = $def;
 	}
