--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -45,6 +45,7 @@ my $QUOTA_FSLIST= '@FS_WITH_QUOTAS@';
 my $ETCDIR      = "$PREFIX/etc";
 my $LIBDIR      = "$PREFIX/lib";
 my $SCRATCHDIR =  '@FSDIR_SCRATCH@';
+my $NOSHAREDFS  = @NOSHAREDFS@;
 my $OUTER_BOSS = '@OUTERBOSS_NODENAME@';
 if ($OUTER_BOSS eq '')
     { $OUTER_BOSS = "www.emulab.net"; }
@@ -770,15 +771,17 @@ Phase "exports", "Setting up exports", sub {
 	    # /share is special. We want to export to boss read-write,
 	    # but to the control network read-only.
 	    #
-	    my ($a,$b,$c,$d) =
-		($CONTROL_NETWORK =~ /^(\d*)\.(\d*)\.(\d*)\.(\d*)/);
 	    my $realdir = `realpath $SHAREROOT`;
 	    chomp($realdir);
 	    push(@exports_lines,
 		 "$realdir\t$BOSSNODE -maproot=root");
-	    push(@exports_lines,
-		 "$realdir\t-network ${a}.${b}.${c} -mask $CONTROL_NETMASK ".
-		 "-maproot=root -ro -alldirs");
+	    if (!$NOSHAREDFS) {
+		my ($a,$b,$c,$d) =
+		    ($CONTROL_NETWORK =~ /^(\d*)\.(\d*)\.(\d*)\.(\d*)/);
+		push(@exports_lines,
+		     "$realdir\t-network ${a}.${b}.${c} ".
+		     "-mask $CONTROL_NETMASK -maproot=root -ro -alldirs");
+	    }
 	}
 
 	#
