--- a/os/imagezip/GNUmakefile.in
+++ b/os/imagezip/GNUmakefile.in
@@ -11,8 +11,8 @@ SUBDIR		= os/imagezip
 DISTFILES	= global.h imagehdr.h queue.h sliceinfo.h \
 		  imagedump.c imagedump.8 imagezip.c imagezip.8 \
 		  imageunzip.c crc.c disksize.c imageunzip.8 \
-		  extfs/*.[hc] ext4fs/*.[hc] fat/*.[hc] ffs/*.[hc] ntfs/*.[hc] shd/*.[hc] \
-		  hashmap/*.[hc]
+		  extfs/*.[hc] ext4fs/*.[hc] fat/*.[hc] ffs/*.[hc] \
+		  ntfs/*.[hc] hashmap/*.[hc]
 
 EXPANDCOPYRIGHT	= /usr/site/lib/copyright/expand-copyr
 
@@ -182,7 +182,7 @@ imagehash: imagehash.o version.o
 imagehash.o:	imagehash.c
 	$(CC) -c $(HASHCFLAGS) -o imagehash.o $<
 
-ffs extfs ext4fs ntfs fat shd hashmap:
+$(SUBDIRS):
 	@$(MAKE) SUBDIRCFLAGS="$(SUBDIRCFLAGS)" -C $@ all
 
 imagezip.o: sliceinfo.h imagehdr.h global.h
@@ -231,4 +231,4 @@ imagezip.tar: Makefile.sa Makefile-linux.sa
 	tar cf imagezip.tar imagezip-dist
 	rm -rf imagezip-dist
 
-.PHONY:	$(SUBDIRS)
+.PHONY: $(SUBDIRS)
