--- a/tbsetup/eventsys.proxy.in
+++ b/tbsetup/eventsys.proxy.in
@@ -25,7 +25,7 @@ sub usage()
 	"-l logfile -t record_file start|stop|replay\n";
     exit(-1);
 }
-my $optlist = "u:e:k:dl:g:t:a";
+my $optlist = "u:e:k:dl:g:t:aN";
 my $debug   = 0;
 my $runagent= 0;
 my $user;
@@ -105,6 +105,9 @@ if (defined($options{"a"})) {
 }
 if (defined($options{"t"})) {
     $recordfile = $options{"t"};
+}
+if (defined($options{"N"})) {
+    $sched = "$TB/sbin/new-event-sched";
 }
 
 $logfile    = $options{"l"};
