--- a/tbsetup/eventsys_control.in
+++ b/tbsetup/eventsys_control.in
@@ -64,6 +64,7 @@ use libtestbed;
 use libtblog;
 use Experiment;
 use User;
+use EmulabFeatures;
 
 #
 # Turn off line buffering on output
@@ -193,6 +194,12 @@ if (!defined($group)) {
 # flip back. 
 #
 my $cmd = $proxy;
+
+if (EmulabFeatures->FeatureEnabled("NewScheduler", $this_user, $group,
+                                   $experiment)) {
+	$cmd .= " -N ";
+}
+
 $cmd .= " -d"
     if ($debug);
 $cmd .= " -a"
