--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -112,7 +112,8 @@ use vars qw(@ISA @EXPORT);
 	 TBDB_NODEOPMODE_UNKNOWNOS TBDB_NODEOPMODE_RELOADING
 	 TBDB_NODEOPMODE_NORMALv1 TBDB_NODEOPMODE_MINIMAL TBDB_NODEOPMODE_PCVM
 	 TBDB_NODEOPMODE_RELOAD TBDB_NODEOPMODE_RELOADMOTE
-         TBDB_NODEOPMODE_SECURELOAD TBDB_NODEOPMODE_RELOADPCVM
+         TBDB_NODEOPMODE_RELOADPCVM
+	 TBDB_NODEOPMODE_SECUREBOOT TBDB_NODEOPMODE_SECURELOAD
 	 TBDB_NODEOPMODE_DELAY
 	 TBDB_NODEOPMODE_BOOTWHAT
 	 TBDB_NODEOPMODE_ANY
@@ -505,6 +506,7 @@ sub TBDB_NODEOPMODE_NORMALv1	{ "NORMALv1"; }
 sub TBDB_NODEOPMODE_MINIMAL	{ "MINIMAL"; }
 sub TBDB_NODEOPMODE_PCVM	{ "PCVM"; }
 sub TBDB_NODEOPMODE_RELOAD	{ "RELOAD"; }
+sub TBDB_NODEOPMODE_SECUREBOOT	{ "SECUREBOOT"; }
 sub TBDB_NODEOPMODE_SECURELOAD	{ "SECURELOAD"; }
 sub TBDB_NODEOPMODE_RELOADMOTE	{ "RELOAD-MOTE"; }
 sub TBDB_NODEOPMODE_RELOADPCVM	{ "RELOAD-PCVM"; }
