Fix a 7.5 year old typo. (couldn't beat Rob's 10 year old bug!)
stated POWER* triggers will now actually do something!

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -1132,7 +1132,7 @@ sub handleCommand($$;$$) {
 	    # so we don't need to do any fancy stuff here.
 
 	    my $cmd = "$power $func $nodelist &";
-	    debug("$cmd\n") and
+	    debug("$cmd\n");
 	    system($cmd) and
 	      notify("$params/$command: ".
 		     "Command '$cmd' failed, error $?: $!\n");
