--- a/assign/GNUmakefile.in
+++ b/assign/GNUmakefile.in
@@ -64,7 +64,7 @@ CXXFLAGS += -O3
 CXXFLAGS += -DMELT -DEPSILON_TERMINATE -DCHILL -DNEIGHBOR_LENGTH \
     -DLOCAL_DERIVATIVE -DALLOW_NEGATIVE_DELTA
 # Bug/scoring fixes
-CXXFLAGS += -DINTERSWITCH_LENGTH -DFIX_SHARED_INTERFACES 
+CXXFLAGS += -DINTERSWITCH_LENGTH
 # Various tweaks to the simulated annealing behavior
 CXXFLAGS += -DFIND_PNODE_SEARCH -DNO_REVERT
 # Keeps information about which pclasses are potential mappings for vnodes on a
