Remove one-time frisbee index initialization from frisbeelauncher.
This should never have been there in the first place, and I don't want to
carry that hack forward into the post-frisbeelauncher world.

--- a/db/EmulabConstants.pm.in
+++ b/db/EmulabConstants.pm.in
@@ -131,6 +131,7 @@ use vars qw(@ISA @EXPORT);
 	 TBDB_STATS_FLAGS_MODSWAPOUT
 
 	 TBDB_JAILIPBASE TBDB_JAILIPMASK
+	 TBDB_FRISBEEMCBASEADDR
 
 	 TBDB_RSRVROLE_NODE TBDB_RSRVROLE_VIRTHOST TBDB_RSRVROLE_DELAYNODE
 	 TBDB_RSRVROLE_SIMHOST
@@ -502,6 +503,9 @@ sub TBDB_STATS_FLAGS_MODSWAPOUT() { 0x40; }
 # Jail.
 sub TBDB_JAILIPBASE()		{ "@JAILIPBASE@"; }
 sub TBDB_JAILIPMASK()		{ "@JAILIPMASK@"; }
+
+# Frisbee.
+sub TBDB_FRISBEEMCBASEADDR()	{ "@FRISEBEEMCASTADDR@:@FRISEBEEMCASTPORT@"; }
 
 # Reserved node "roles"
 sub TBDB_RSRVROLE_NODE()	{ "node"; }
