Fix a typo I never noticed before.

--- a/tbsetup/portstats.in
+++ b/tbsetup/portstats.in
@@ -156,7 +156,7 @@ my %oids = (
     'ifInErrors'        => [['        In','    Errors'], '@>>>>>>>>>'],
     'ifInUnknownProtos' => [['   Unknown','  Protocol'], '@>>>>>>>>>'],
     'ifOutOctets'       => [['       Out','    Octets'], '@>>>>>>>>>'],
-    'ifOutUcastPkts'    => [['OutUnicast','   Pakcets'], '@>>>>>>>>>'],
+    'ifOutUcastPkts'    => [['OutUnicast','   Packets'], '@>>>>>>>>>'],
     'ifOutNUcastPkts'   => [[' OutNUcast','   Packets'], '@>>>>>>>>>'],
     'ifOutDiscards'     => [['       Out','  Discards'], '@>>>>>>>>>'],
     'ifOutErrors'       => [['       Out','    Errors'], '@>>>>>>>>>'],
