--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -66,7 +66,7 @@ SERVEROBJS	= server.o $(SHAREDOBJS)
 MYSQLCFLAGS	= -I/usr/local/include
 MYSQLLIBS	= -L/usr/local/lib/mysql -lmysqlclient
 MSERVERFLAGS	= $(CFLAGS) $(MYSQLCFLAGS) -DUSE_EMULAB_CONFIG -I$(TESTBED_SRCDIR)/lib/libtb -I$(OBJDIR)
-MSERVERLIBS	= $(OBJDIR)/lib/libtb/libtb.a $(MYSQLLIBS) $(PTHREADLIBS)
+MSERVERLIBS	= $(OBJDIR)/lib/libtb/libtb.a $(MYSQLLIBS)
 MSERVEROBJS	= mserver.o config.o config_emulab.o $(SHAREDOBJS)
 
 CFLAGS		= -O2 -g -Wall -fno-builtin-log $(LDSTATIC) $(PTHREADCFLAGS) -DSTATS -DMASTER_SERVER
