Aerformed. If the mserver receiving the request allows the caller to be a proxy, then it will perform its checks against the hostIP provided rather than the IP of the message sender.  For the Emulab subboss case, subboss nodes (as determined from the DB) are allowed to explicitly specify hosts that are under their control.  The master server on real boss will run with proxying enabled.
Also, in a fit of madness, I added a version number to the master server
protocol.  This way, if at some distant point in the future (say next week)
I realize I screwed up the protocol, I can fix it without resorting to creative
retrofitting of a version number (see imagezip) or the more Orwellian
eradication and denial of past versions (what I am doing now). Furthermore,
using an ill-thought-out insight, I made the version number be an ASCII string
in case I decide to change to an all-text protocol at some equally distant
point in the future.

--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -35,7 +35,7 @@ endif
 
 include $(OBJDIR)/Makeconf
 
-all:	frisbee frisbeed
+all:	frisbee frisbeed mfrisbeed
 
 include $(TESTBED_SRCDIR)/GNUmakerules
 
@@ -146,7 +146,7 @@ log.o:		decls.h log.h
 network.o:	decls.h utils.h
 trace.o:	decls.h trace.h log.h
 
-install:	$(INSTALL_SBINDIR)/frisbeed $(INSTALL_SBINDIR)/frisbee
+install:	$(INSTALL_SBINDIR)/mfrisbeed $(INSTALL_SBINDIR)/frisbeed $(INSTALL_SBINDIR)/frisbee
 
 client: frisbee
 
@@ -154,7 +154,7 @@ client-install: client
 	$(INSTALL_PROGRAM) frisbee $(DESTDIR)$(CLIENT_BINDIR)
 
 clean:
-	/bin/rm -f *.o *.a frisbee frisbeed frisbee.debug frisbeed.debug
+	/bin/rm -f *.o *.a frisbee frisbeed mfrisbeed *.debug
 	/bin/rm -f frisbee.tar frisbee.tar.gz
 	/bin/rm -rf frisbee-dist
 
